--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,7 +44,11 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
-        <li><%= link_to 'Signup', '/' %></li>
+        <% if current_user %>
+        <li>Signed in as <%= current_user.name %> | <%= link_to "Logout", logout_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to 'Register', [:new, :user] %></li>
+        <% end %>
       </ul>
     </div>
   </div>
