user login/logout working successfully

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   </header>
 
   <div class="well">
-    <%= link_to 'Go Back', [:admin, :products], class: 'btn btn-info' %>
+    <%= link_to 'Go Back', [:products], class: 'btn btn-info' %>
   </div>
 
   <div class="row">
