--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -45,9 +45,11 @@
           <% end %>
         </li>
         <% if current_user %>
-        <li>Signed in as <%= current_user.name %> | <%= link_to "Logout", logout_path, method: :delete %></li>
+        <li>Signed in as <%= current_user.name %></li>
+        <li><%= link_to "Logout", logout_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Register', [:new, :user] %></li>
+        <li><%= link_to 'Login', [:new, :session] %></li>
         <% end %>
       </ul>
     </div>
