--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,10 @@
     <h1>My Cart</h1>
   </header>
 
+  <%if enhanced_cart.length == 0%>
+    <h4>Your cart is empty.</h4>
+    <%= link_to 'Continue Shopping', :root, class: 'btn btn-info' %>
+  <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +52,6 @@
       <% end %>
     </div>
   </div>
+  <%end%>
 
 </section>
