--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,21 +1,6 @@
-<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="3000">
-      <span class="d-block w-100">Hello</span>
-    </div>
-    <div class="carousel-item" data-interval="3000">
-      <span class="d-block w-100">Yo</span>
-    </div>
-    <div class="carousel-item" data-interval="3000">
-      <span class="d-block w-100"><%=@review.inspect%></span>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div class="list-group">
+  <li class="list-group-item list-group-item-warning">
+    <h4 class="list-group-item-heading"><%= review.user.name %></h4>
+    <p class="list-group-item-text"><%= review.description %></p>
+  </li>
 </div>
