--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,7 +28,29 @@
 
   </article>
   <h2>Reviews</h2>
+  <h3>Write A Review</h3>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-1">
+      <%= form_for [@product, @review] do |form| %>
+
+        <div class="form-group">
+          <%= form.label :description %>
+          <%= form.text_area :description, size: '25x5', class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :rating %>
+          <%= form.select :rating, [5,4,3,2,1], class: 'form-control' %>
+        </div>
+
+        <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+
+  <div>
   <% @reviews.each do |review|%>
   <%= render partial:"review", locals: { review: review }%>
   <% end %>
+  <div>
 </section>
