--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,6 +28,7 @@
 
   </article>
   <h2>Reviews</h2>
+  <% if current_user %>
   <h3>Write A Review</h3>
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
@@ -47,6 +48,7 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
   <div>
   <% @reviews.each do |review|%>
