--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,7 +30,7 @@
   <h2>Reviews</h2>
   <% if current_user %>
   <h3>Write A Review</h3>
-  <div class="row">
+  <div class="row compose-review">
     <div class="col-sm-6 col-sm-offset-1">
       <%= form_for [@product, @review] do |form| %>
 
