--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,20 +31,21 @@
   <% if current_user %>
   <h3>Write A Review</h3>
   <div class="row compose-review">
-    <div class="col-sm-6 col-sm-offset-1">
+    <div class="col-md-6">
       <%= form_for [@product, @review] do |form| %>
 
         <div class="form-group">
           <%= form.label :description %>
-          <%= form.text_area :description, size: '25x5', class: 'form-control' %>
+          <%= form.text_area :description, size: '30x5', class: 'form-control' %>
         </div>
-
+        <div class="compose-review-right">
         <div class="form-group">
           <%= form.label :rating %>
           <%= form.select :rating, [5,4,3,2,1], class: 'form-control' %>
         </div>
 
         <%= form.submit 'Submit Review', class: 'btn btn-primary' %>
+        </div>
       <% end %>
     </div>
   </div>
