--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,6 +22,9 @@
           <dd><%= @product.quantity %></dd>
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
+          <dd><%= button_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary' , method: :post do %>
+            <%= fa_icon "shopping-cart", text: 'Add' %>
+          <% end %></dd>
         </dl>
       </div>
     </div>
