--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
           <dd><%= button_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary' , method: :post do %>
-            <%= fa_icon "shopping-cart", text: 'Add' %>
+            <%= fa_icon "shopping-cart", text: 'Add to Cart' %>
           <% end %></dd>
         </dl>
       </div>
