--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,9 +22,13 @@
           <dd><%= @product.quantity %></dd>
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
+          <% if @product.quantity > 0%>
           <dd><%= button_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary' , method: :post do %>
             <%= fa_icon "shopping-cart", text: 'Add to Cart' %>
           <% end %></dd>
+          <% else%>
+          <dd class="no-stock">Currently out of stock. Check back soon!</dd>
+          <% end %>
         </dl>
       </div>
     </div>
