refactored review render on product show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -59,8 +59,6 @@
   <% end %>
 
   <div>
-  <% @reviews.each do |review|%>
-  <%= render partial:"review", locals: { review: review }%>
-  <% end %>
+  <%= render @reviews %>
   <div>
 </section>
