--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -45,7 +45,7 @@
           <% end %>
         </li>
         <% if current_user %>
-        <li><p class="navbar-text">Signed in as <%= current_user.name %></p></li>
+        <li><p class="navbar-text">Signed in as <%= current_user.first_name %></p></li>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Register', [:new, :user] %></li>
