--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Signup!</h1>
-
 <section class="admin-products-new">
 
   <header class="page-header">
@@ -10,13 +8,27 @@
     <%= link_to 'Go Back', [:products], class: 'btn btn-info' %>
   </div>
 
+  <div><ul class="list-group">
+    <% if @user.errors.full_messages.any? %>
+      <% @user.errors.full_messages.each do |message|%>
+        <li class="list-group-item list-group-item-danger" role="alert"><%= "Error: " + message %></li>
+      <%end%>
+    <% end %>
+    </ul>
+  </div>
+
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
       <%= form_for @user do |form| %>
 
         <div class="form-group">
-          <%= form.label :name %>
-          <%= form.text_field :name, class: 'form-control' %>
+          <%= form.label :first_name %>
+          <%= form.text_field :first_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :last_name %>
+          <%= form.text_field :last_name, class: 'form-control' %>
         </div>
 
         <div class="form-group">
